# leeds_effective_city_size

./: README.md  pyproject.toml
analysis/: car_README.md  car_times.csv  extended_stats.json  isochrones.geojson  lsoa_times.csv  stats.json  suburb_frequencies.csv
scripts/: build_full_1957_gtfs.py  build_historical_gtfs.py  filter_modern_gtfs.py  make_car_ownership_figures.py  make_extended_figures.py  make_figures.py  make_publishable_figures.py  merge_bus_transcriptions.py  prepare_crops.py  run_analysis.py  run_extended_analysis.py
src/leeds_trams/: __init__.py  accessibility.py  geometry.py  historical_gtfs.py  modern_gtfs.py  rail_gtfs.py  router.py  transcripts.py
