[project]
name = "leeds-trams"
version = "1.0.0"
description = "Leeds 1950s tram network: GTFS reconstruction from historical timetables and past-vs-present transit accessibility analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "shapely>=2.0",
    "matplotlib>=3.8",
    "pillow>=10.0",
    "contextily>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leeds_trams"]
